--- a/web.html
+++ b/web.html
@@ -10,6 +10,9 @@
             <h1>
                 ¡Hola!
             </h1>
+            <h2>
+                ¡Es importante tomar el curso de Git!
+            </h2>
         </div>
     </body>
 </html>
